--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,18 +27,19 @@ a {
 }
 
 .top-wrapper h1 {
-  opacity: 0.7;
-  font-size: 40px;
+  opacity: 0.9;
+  font-size: 36px;
   letter-spacing: 5px;
   margin-bottom: 10px;
   line-height: 25px;
 }
 
 .top-wrapper p {
-  opacity: 0.7;
-  margin-bottom: 5px;
-  margin-top: 35px;
-  line-height: 2px;
+  opacity: 0.9;
+  margin-bottom: 10px;
+  font-size: 18px;
+  line-height: 15px;
+  color: #fff;
 }
 
 .btn-wrapper {
@@ -51,7 +52,7 @@ a {
 }
 
 .signup {
-  background-color: #3498db;
+  background-color: #d23838;
 }
 
 .btn {
@@ -76,6 +77,11 @@ header {
   z-index: 10;
 }
 
+.logo {
+  width: 124px;
+  margin-top: 20px;
+}
+
 .header-left {
   float: left;
 }
@@ -96,4 +102,19 @@ header {
 
 .header-right a:hover {
   background-color: rgba(255, 255, 255, 0.3);
+}
+
+footer img {
+  width: 125px;
+}
+
+footer p {
+  color: #b3aeb5;
+  font-size: 12px;
+  text-align: center;
+}
+
+footer {
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
