--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -109,6 +109,49 @@ header {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
+.lesson-wrapper {
+  height: 500px;
+  padding-bottom: 80px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+
+.heading {
+  padding-top: 80px;
+  padding-bottom: 500px;
+  color: #5f5d60;
+}
+
+.heading h2 {
+  font-weight: normal;
+}
+
+.lesson {
+  float: left;
+  width: 25%;
+}
+
+.lesson-icon {
+  position: relative;
+}
+
+.lesson-icon p {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  color: #b3aeb5;
+}
+
+.txt-contens {
+  width: 80%;
+  display: inline-block;
+  margin-top: 15px;
+  font-size: 15px;
+  color: #b3aeb5;
+}
+
 footer img {
   width: 125px;
 }
