--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,19 +1,227 @@
-.message {
-  background-color: #5dca88;
-  padding: 15px 40px;
-  cursor: pointer;
-  box-shadow: 0 7px #1a7940;
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
+
+a {
+  text-decoration: none;
+}
+
+.clear {
+  clear: left;
+}
+
+.container {
+  max-width: 1170px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.top-wrapper {
+  padding: 180px 0 100px 0;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(250, 244, 222, 0.1),
+      rgba(2, 154, 167, 0.8)
+    ),
+    url("images/main-image.jpg");
+  background-size: cover;
+  color: white;
+  text-align: center;
+}
+
+.top-wrapper h1 {
+  opacity: 0.9;
+  font-size: 36px;
+  letter-spacing: 5px;
+  margin-bottom: 10px;
+  line-height: 25px;
+}
+
+.top-wrapper p {
+  opacity: 0.9;
+  margin-bottom: 10px;
+  font-size: 18px;
+  line-height: 15px;
+  color: #fff;
+}
+
+.btn-wrapper {
+  text-align: center;
+  margin: 30px 0;
+}
+
+.btn-wrapper p {
+  margin: 10px 0;
+}
+
+.signup {
+  background-color: #d23838;
+}
+
+.btn {
+  padding: 12px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.fa {
+  margin-right: 5px;
+}
+
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
+}
+
+header {
+  height: 65px;
+  width: 100%;
+  background-color: rgba(34, 49, 52, 0.9);
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+.logo {
+  width: 124px;
+  margin-top: 20px;
+}
+
+.header-left {
+  float: left;
+}
+
+.header-right {
+  float: right;
+  margin-right: -25px;
+}
+
+.header-right a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+  float: left;
+  transition: all 0.5s;
+}
+
+.header-right a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.lesson-wrapper {
+  height: 700px;
+  padding-bottom: 80px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+
+.heading {
+  padding-top: 80px;
+  padding-bottom: 50px;
+  color: #5f5d60;
+}
+
+.heading h2 {
+  font-weight: normal;
+}
+
+.lesson {
+  float: left;
+  width: 25%;
+}
+
+.foto {
+  width: 95%;
+  height: 200px;
+  margin-top: 20px;
+  border-radius: 11px;
+}
+
+.foto:hover {
+  box-shadow: 2px 2px 6px 0px rgba(55, 0, 0, 0.75);
+  cursor: pointer;
+}
+
+.lesson-icon {
+  position: relative;
+}
+
+.judul {
+  position: relative;
+  top: 100%;
+  width: 100%;
+  margin-bottom: 15px;
+  color: #e74c3c;
+}
+
+.judul:hover {
+  opacity: 1;
+  color: #16a085;
+  cursor: pointer;
+}
+
+.text-contens {
+  position: relative;
+  width: 80%;
+  display: inline-block;
+  margin-top: 15px;
+  font-size: 15px;
+  color: #b3aeb5;
+}
+
+.clear {
+  clear: left;
+}
+
 .message-wrapper {
   border-bottom: 1px solid #eee;
   padding-bottom: 80px;
   text-align: center;
 }
-.heading h3 {
-  font-weight: normal;
+
+.message {
+  padding: 15px 40px;
+  background-color: #5dca88;
+  cursor: pointer;
+  box-shadow: 0 7px #1a7940;
 }
+
 .message:active {
-  box-shadow: none;
   position: relative;
   top: 7px;
+  box-shadow: none;
+}
+
+footer img {
+  width: 125px;
+}
+
+footer p {
+  color: #b3aeb5;
+  font-size: 12px;
+  text-align: center;
+}
+
+footer {
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
