--- a/responsive.css
+++ b/responsive.css
@@ -1,9 +1,6 @@
 /* Untuk Tablet */
 @media all and (max-width: 1000px) {
-  .fa fa menu-icon {
-    display: block;
-    
-  .lesson {
+  .location {
     width: 50%;
     margin-bottom: 50px;
   }
@@ -19,7 +16,7 @@
 
 /* Untuk Smartphone */
 @media all and (max-width: 670px) {
-  .lesson {
+  .location {
     width: 100%;
   }
 
